# R4C

./: .gitignore  pyproject.toml
R4C/: urls.py
api/: generics.py  service.py  urls.py  views.py
orders/: models.py
orders/migrations/: 0002_auto_20241214_0729.py
robots/: apps.py  models.py  signals.py
